Fix image paths and stylesheet link in index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>DSSC-TI</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="imagen-protegida">
-        <img src="/imag/DSSC-TI at 9.10.58 PM.jpeg" alt="Imagen de DSSC-TI" width="10%" draggable="false" class="logo">
+        <img src="imag/DSSC-TI at 9.10.58 PM.jpeg" alt="Imagen de DSSC-TI" width="10%" draggable="false" class="logo">
     </div>
     <h1>Desarrollo de software y soporte al cliente <br>(Tecnologia de información)</h1><br>
     <h2>Soluciones en Excel, Access y Power BI para negocios y emprendedores</h2>
@@ -33,16 +33,16 @@
 	•	Indicadores claros para toma de decisiones</h4></p>
     <p><h3>-	“Ejemplo de control de ventas Excel” <br>
     <div class="imagen-protegida">
-        <img src="/imag/Excel.png" alt="Imagen de DSSC-TI" width="50%" draggable="false" class="logo">
+        <img src="imag/Excel.png" alt="Imagen de DSSC-TI" width="50%" draggable="false" class="logo">
     </div>
 	-	“Dashboard de ventas” <br>
     <div class="imagen-protegida">
-        <img src="/imag/Dash.bmp" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
+        <img src="imag/Dash.bmp" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
     </div>
 	-	“Base de datos de clientes” <br>
     <div class="imagen-protegida">
-        <img src="/imag/Access.png" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
-        <img src="/imag/Access1.png" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
+        <img src="imag/Access.png" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
+        <img src="imag/Access1.png" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
     </div></h3></p>
     <h3>📲 Escríbeme por WhatsApp y dime qué problema tienes, te doy una propuesta sin costo. <br>
     “Te ahorro tiempo y errores”</h3>
