--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Desarrollo de software y soporte al cliente <br>(Tecnologia de información)</h1><br>
     <h2>Soluciones en Excel, Access y Power BI para negocios y emprendedores</h2>
     <h3>Automatizo procesos, reportes y bases de datos para ahorrar tiempo y dinero.</h3>
-    <p><h4>Ejemplos: <br>
+    <p><h4>Problemas comunes que soluciono: <br>
 	•	Archivos de Excel lentos o desordenados <br>
 	•	Reportes que tardan horas <br>
 	•	Datos duplicados <br>
@@ -32,18 +32,25 @@
 	•	Análisis de ventas <br>
 	•	Indicadores claros para toma de decisiones</h4></p>
     <p><h3>-	“Ejemplo de control de ventas Excel” <br>
+	<p>Registro automático con totales mensuales.</p>
     <div class="imagen-protegida">
-        <img src="imag/Excel.png" alt="Imagen de DSSC-TI" width="50%" draggable="false" class="logo">
+        <img src="imag/Excel.png" alt="Imagen de DSSC-TI" width="30%" draggable="false" class="logo">
     </div>
 	-	“Dashboard de ventas” <br>
     <div class="imagen-protegida">
-        <img src="imag/Dash.bmp" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
+        <img src="imag/Dash.bmp" alt="Imagen de DSSC-TI" width="30%" draggable="false" class="logo">
     </div>
 	-	“Base de datos de clientes” <br>
     <div class="imagen-protegida">
-        <img src="imag/Access.png" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
-        <img src="imag/Access1.png" alt="Imagen de DSSC-TI" width="40%" draggable="false" class="logo">
+        <img src="imag/Access.png" alt="Imagen de DSSC-TI" width="30%" draggable="false" class="logo">
     </div></h3></p>
+	</div>
+	-	“¿Como trabajo?” <br>
+	1. Me explicas tu problema <br>
+	2. Analizo tu información <br>
+	3. Te propongo una solución <br>
+	4. Entrego y explico el sistema <br>
+    </div>
     <h3>📲 Escríbeme por WhatsApp y dime qué problema tienes, te doy una propuesta sin costo. <br>
     “Te ahorro tiempo y errores”</h3>
     <div class="cierre-profesional">
