--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <div class="imagen-protegida">
         <img src="imag/Access.png" alt="Imagen de DSSC-TI" width="30%" draggable="false" class="logo">
     </div></h3></p>
-	</div>
+	</div><h3>
 	-	“¿Como trabajo?” <br>
 	1. Me explicas tu problema <br>
 	2. Analizo tu información <br>
 	3. Te propongo una solución <br>
 	4. Entrego y explico el sistema <br>
-    </div>
+    </h3></div>
     <h3>📲 Escríbeme por WhatsApp y dime qué problema tienes, te doy una propuesta sin costo. <br>
     “Te ahorro tiempo y errores”</h3>
     <div class="cierre-profesional">
